// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedOptions should hide if not showing 1`] = `
<div>
  <EuiButtonEmpty
    color="primary"
    iconSide="left"
    iconType="arrowRight"
    onClick={[Function]}
    type="button"
  >
    <span>
      Show advanced options
    </span>
  </EuiButtonEmpty>
  <EuiSpacer
    size="xs"
  />
</div>
`;

exports[`AdvancedOptions should render normally 1`] = `
<div>
  <EuiButtonEmpty
    color="primary"
    iconSide="left"
    iconType="arrowDown"
    onClick={[Function]}
    type="button"
  >
    <span>
      Hide advanced options
    </span>
  </EuiButtonEmpty>
  <EuiSpacer
    size="xs"
  />
  <EuiForm>
    <EuiFormRow
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <span>
          Kibana will provide a unique identifier for each index pattern. If you do not want to use this unique ID, enter a custom one.
        </span>
      }
      label="Custom index pattern ID"
    >
      <EuiFieldText
        data-test-subj="createIndexPatternIdInput"
        fullWidth={false}
        isLoading={false}
        name="indexPatternId"
        onChange={[Function]}
        placeholder="Id"
        value="foobar"
      />
    </EuiFormRow>
  </EuiForm>
</div>
`;
